conductor-tui/tests/snapshots/tui_snapshots__snap_worktree_detail_log_focus.snap
---
source: conductor-tui/tests/tui_snapshots.rs
expression: render_to_string(&state)
---
"┌ Worktree Detail ───────────────────────────────────────────────────────────┐┌ Workflow Runs (feat-123-add-login) (H: ┐"
"│Worktree: feat-123-add-login                                                ││                                        │"
"│Repo: my-app                                                                ││                                        │"
"│Branch: feat/123-add-login                                                  ││                                        │"
"│Base: (repo default) (Enter to change)                                      ││                                        │"
"│Path: /home/user/my-app/.worktrees/feat-123-add-login                       ││                                        │"
"│Status: active                                                              ││                                        │"
"│Model: (not set) (press Enter to change)                                    ││                                        │"
"│Created: 2024-01-10T00:00:00Z                                               ││                                        │"
"│Ticket: None (press Enter to link)                                          ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│Tab=switch panel  y=copy  o=act  x=stop  X=clear conv  w=workflow  d=del  Es││                                        │"
"└────────────────────────────────────────────────────────────────────────────┘│                                        │"
"┌ Agent Activity ────────────────────────────────────────────────────────────┐│                                        │"
"│No agent activity                                                           ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"│                                                                            ││                                        │"
"└────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────┘"
"┌ Prompt ────────────────────────────────────────────────────────────────────┐┌ Workflow Definitions (feat-123-add-logi┐"
"│No agent running                                                            ││                                        │"
"└────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────┘"
"[Worktree Detail]  Tab:panel  [/]:column  \:workflows  [S]:settings  q:quit                                             "
